fix images jumping when sorting, fix mobile forms, only show “drag images here” when notouch, add modernizr

--- a/corpsey/static/css/application.less
+++ b/corpsey/static/css/application.less
@@ -25,6 +25,10 @@ ul.bullets {
         list-style: disc;
     }
 }
+html:not(.no-touchevents) .no-touch {
+    display: none;
+}
+
 .notice {
     background: #fff189;
     width: 300px;
