--- a/corpsey/static/css/small.less
+++ b/corpsey/static/css/small.less
@@ -183,14 +183,14 @@ body.static #content {
 }
 
 #contribute-page {
-    form.contribute {
-        p.note,
-        input[type=text],
-        input[type=password],
-        button {
-            width: 250px;
-        }
-    }
+    // form.contribute {
+    //     p.note,
+    //     input[type=text],
+    //     input[type=password],
+    //     button {
+    //         width: 250px;
+    //     }
+    // }
     #content {
         width: 85%;
     }
